--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 description = "Rust parser for Xcode .pbxproj files that uses a pest grammar to produce structured JSON output"
 
 [dependencies]
+pest = "2.7"
+pest_derive = "2.7"
