--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ description = "Rust parser for Xcode .pbxproj files that uses a pest grammar to 
 pest = "2.7"
 pest_derive = "2.7"
 thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
