--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ pest_derive = "2.7"
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+clap = { version = "4.5", features = ["derive"] }
+anyhow = "1.0"
